--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "prod": "ng build -c production --base-href=/speculatron/",
+    "prod": "ng build -c production --base-href=/STLV8/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
